<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="UpdateAccountDetailsViewModel"
            type="fr.corentinbringer.endunav.viewmodels.UpdateAccountDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:padding="15dp"
            android:hint="@string/placeholder_email_address"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/blender_pro_heavy"
            android:ems="10"
            android:inputType="textEmailAddress"
            mapbox:layout_constraintEnd_toEndOf="parent"
            mapbox:layout_constraintStart_toStartOf="parent"
            mapbox:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:padding="15dp"
            android:hint="@string/placeholder_password"
            android:text="@={UpdateAccountDetailsViewModel.password}"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/blender_pro_heavy"
            android:ems="10"
            android:inputType="textPassword"
            mapbox:layout_constraintEnd_toEndOf="parent"
            mapbox:layout_constraintStart_toStartOf="parent"
            mapbox:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

        <Button
            android:id="@+id/button_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/label_update_account_button"
            android:background="@drawable/button_orange"
            mapbox:layout_constraintEnd_toEndOf="parent"
            mapbox:layout_constraintStart_toStartOf="parent"
            mapbox:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <android.widget.Button
            android:id="@+id/button_delete_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_black"
            android:textColor="@color/white"
            android:text="@string/label_update_account_button_delete"
            mapbox:layout_constraintBottom_toBottomOf="parent"
            mapbox:layout_constraintEnd_toEndOf="parent"
            mapbox:layout_constraintStart_toStartOf="parent"
            mapbox:layout_constraintTop_toBottomOf="@+id/button_update"
            mapbox:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>